# jpeg-decoder

./: CMakeLists.txt  README.md
cmake/: TestSolution.cmake
src/: bit_reader.h  decoder.cpp  fft.cpp  huffman.cpp  jpeg.cpp  jpeg.h  main.cpp  parser.cpp  parser.h  stream_reader.cpp  stream_reader.h
